--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.0
   flutter_bloc: ^8.1.1
+  cloud_firestore: ^4.4.3
+  firebase_auth: ^4.2.9
+  firebase_core: ^2.7.0
+  equatable: ^2.0.4
 
 dev_dependencies:
   flutter_test:
