--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.2.9
   firebase_core: ^2.7.0
   equatable: ^2.0.4
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
